# tensorflow_practice

./: Dockerfile  Makefile  README.md  pyproject.toml  run.sh
src/: main.py
src/args/: args.py
src/domain/: data_source.py  fashion_minist.py  minist.py
src/domain/data_source/: data_source.py  fashion_mnist.py  flowers.py  mnist.py
src/executor/: executor.py  fashion_minist.py  fashion_mnist_executor.py  flowers_executor.py  mnist_executor.py  quickstart_beginner.py
src/preprocessor/: FashionMnistPreprocessor.py  FlowersPreprocessor.py  MnistPreprocessor.py  preprocessor.py
src/repository/: fashion_minist_repository.py  fashion_mnist_repository.py  flowers_repository.py  minist_repository.py  mnist_repository.py  repository.py
