[tool.poetry]
name = "tensorflow_practice"
version = "0.1.7"
description = ""
authors = ["kazuogawa"]

[tool.poetry.dependencies]
python = "^3.8"
tensorflow = "2.4.1"
matplotlib = "3.4.1"
scikit-learn = "0.24.0"

[tool.poetry.dev-dependencies]
black = "21.4b2"
isort = "5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
